--- a/src/Signup.css
+++ b/src/Signup.css
@@ -12,3 +12,9 @@
     border-radius: 8px;
     background-color: #ffffff;
   }
+  .logo {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 2%;
+    border-radius : 6%;
+  }
