signup signin done
Did working part of signup and sign in

--- a/src/Signup.css
+++ b/src/Signup.css
@@ -18,3 +18,16 @@
     margin-bottom: 2%;
     border-radius : 6%;
   }
+  .button{
+    align-items: center;
+    margin-left:40%;
+  }
+  .switch
+  {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .switch p{
+    margin-right:2%;
+  }
