Comments section done
comments section done , comments modal still in post, succesful in username,

--- a/src/Post.css
+++ b/src/Post.css
@@ -20,6 +20,7 @@
 .post h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    align-items: center;
 }
 
 .post p {
@@ -28,6 +29,7 @@
 }
 .heading {
     position: relative;
+    align-items:center;
   }
   
   .post {
