--- a/src/Signup.css
+++ b/src/Signup.css
@@ -5,7 +5,7 @@
     height: 100vh; 
   }
   
-  .form-container {
+  .form-containers {
     width: 40%; 
     padding: 2%;
     border: 1px solid #ccc;
